--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -693,6 +693,130 @@ h1 .emoji {
     transform: scale(1);
 }
 
+.goals-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 50px;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%);
+    position: absolute;
+}
+
+.goals-header h3 {
+    font-size: 32px;
+}
+
+.goals-header p {
+    font-size: 18px;
+    margin: 15px 0 10px 0;
+}
+
+.tile-container {
+    width: 100vmin;
+    height: 50vh;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.tile {
+    height: 200px;
+    width: 170px;
+    margin: 40px;
+    position: relative;
+}
+
+/* Add media query for smaller screens */
+@media (max-width: 768px) {
+    .tile {
+        width: calc(50% - 20px); /* Full width for smaller screens */
+    }
+}
+
+input[type="checkbox"] {
+    -webkit-appearance: none;    
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 3px solid transparent;
+    outline: none;
+    box-shadow: 15px 15px 25px rgba(2,28,53,0.05);
+
+}
+
+input[type="checkbox"]:after {
+    position: absolute;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    content: "\f111";
+    font-size: 22px;
+    top: 10px;
+    left: 10px;
+    color: #e2e6f3;
+}
+
+input[type="checkbox"]:hover {
+    transform: scale(1.08);
+}
+
+input[type="checkbox"]:checked {
+    border: 3px solid #478bfb;
+}
+
+input[type="checkbox"]:checked:after {
+    font-weight: 900;
+    content: "\f058";
+    color: #478bfb;
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    height: 80%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    cursor: pointer;
+}
+
+label .fas {
+    font-size: 60px;
+    color: #2c2c51;
+}
+
+input[type="checkbox"]:checked + label .fas {
+    animation: grow 0.5s
+}
+
+@keyframes grow {
+    50% {
+        font-size: 80px;
+    }
+}
+
+label h6 {
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: #7b7b93;
+}
+
+
 
 
 
