--- a/styles.css
+++ b/styles.css
@@ -585,13 +585,22 @@ section.home video {
 }
 
 .resultPill {
-    position: absolute;
-    border: solid red 10px;
-    /* transform: translateY(500%); */
+    position: relative;
+    animation: dropDown 2s linear infinite;
+    opacity: 0;
+}
+
+@keyframes dropDown {
+    0% {
+        transform: translateY(-200px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
 }
 
 .bottle {
     position: relative;
-    border: solid red 10px;
-    transform: translateY(10%);
 }
