--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -638,7 +638,7 @@ h1 .emoji {
     line-height: 25px;
     display: block;
     padding: 15px 55px;
-    background: #ddd;
+    background: #fff;
     border: 2px solid rgba(255, 255, 255, 0.1);
     border-radius: 30px;
     cursor: pointer;
@@ -698,7 +698,7 @@ h1 .emoji {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 50px;
+    padding-top: 30px;
     top: 10%;
     left: 50%;
     transform: translate(-50%);
@@ -735,10 +735,14 @@ h1 .emoji {
     position: relative;
 }
 
+
 /* Add media query for smaller screens */
 @media (max-width: 768px) {
     .tile {
         width: calc(50% - 20px); /* Full width for smaller screens */
+    }
+    .cont-btn {
+        bottom: 20px;
     }
 }
 
@@ -814,6 +818,185 @@ label h6 {
     font-size: 15px;
     font-weight: 400;
     color: #7b7b93;
+}
+
+.cont-btn {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 40px;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.cont-btn:hover {
+    background-color: #2c2c51;
+}
+
+.main {
+    width: 100%;
+}
+.questions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    height: 100%;
+}
+.quiz-section {
+    position: relative;
+    min-height: 100vh;  /* Use min-height instead of height */
+    background: #e3f0fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;  /* Set width to 100% */
+}
+.quiz-section.active {
+    left: 0;
+}
+
+.quiz-section .quiz-box {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    border-radius: 6px;
+    flex-direction: column;
+    padding: 20px 30px;
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(.9);
+    transition: .3s ease;
+    transition-delay: 0s;
+}
+
+.quiz-section .quiz-box.active {
+    opacity: 1;
+    pointer-events: auto;
+    overflow-y: auto;
+}
+
+.quiz-box h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 32px;
+    text-align: center;
+    border-radius: 6px;
+}
+
+.quiz-header span {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.quiz-box .question-text {
+    margin-bottom: 40px;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.option-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.option-list .option:hover {
+    border: 2px solid #333;
+}
+
+.option-list .option {
+    width: 300px;
+    background-color: #fff;
+    border-radius: 30px;
+    padding: 15px;
+    font-size: 17px;
+    margin: 20px 0;
+    cursor: pointer;
+    border: 2px solid transparent;
+}
+
+
+.option-list .option.active {
+    color: #00a63d;
+    border: 2px solid #333;
+}
+
+.quiz-box .quiz-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    margin-top: 30px;
+}
+
+.quiz-footer .question-total {
+    font-weight: 600;
+}
+
+.quiz-footer .next-btn {
+    position: relative;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 40px;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    outline: none;
+    font-weight: 600;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.quiz-footer .next-btn.active:hover {
+    background: #329da8;
+    border-color: #329da8;
+}
+
+.quiz-footer .next-btn.active {
+    pointer-events: auto;
+    background-color: #2c2c51;
+    border-color: #2c2c51;
+}
+
+.quiz-footer .prev-btn {
+    padding: 10px 20px;
+    background-color: lightgray;
+    color: #fff;
+    border: none;
+    border-radius: 40px;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    outline: none;
+    font-weight: 600;
+    cursor: pointer;
+    transition: .5s;
+    font-weight: 600;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.quiz-footer .prev-btn.active {
+    pointer-events: auto;
+    background-color: #2c2c51;
+    border-color: #2c2c51;
+}
+
+.quiz-footer .prev-btn.active:hover {
+    background: #329da8;
+    border-color: #329da8;
 }
 
 
