just in case anything breaks

--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -910,6 +910,7 @@ label h6 {
     transform: scale(.9);
     transition: .3s ease;
     transition-delay: 0s;
+    opacity: 0;
 }
 
 .quiz-section .quiz-box.active {
