--- a/styles/test.css
+++ b/styles/test.css
@@ -11,6 +11,68 @@ body, html {
     background-color: #f5f5f5;
 }
 
+
+.lifestyle {
+    display: flex;
+    flex: 1;
+    width: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    position: relative;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.white-bg {
+    max-height: 100%;
+    object-fit: cover;
+    width: 50%
+}
+
+
+.lifestyle h1 {
+    font-size: 32px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+
+.lifestyle p {
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+
+.lifestyle a {
+    border-bottom: 1px solid #333;
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+
 /* Center the answers vertically on the screen */
 .questions {
     display: flex;
@@ -21,11 +83,12 @@ body, html {
     height: 100%;
 }
 
+
 .lifestyle-quiz {
     width: 100%;
 }
 
-.quiz-section {
+.lifestyle-section {
     position: relative;
     min-height: 100vh;  /* Use min-height instead of height */
     background: #e3f0fa;
@@ -36,11 +99,11 @@ body, html {
     width: 100%;  /* Set width to 100% */
 }
 
-.quiz-section.active {
+.lifestyle-section.active {
     left: 0;
 }
 
-.quiz-section .quiz-box {
+.lifestyle-section .lifestyle-box {
     position: relative;
     width: 100%;
     height: 100vh;
@@ -48,19 +111,21 @@ body, html {
     flex-direction: column;
     padding: 20px 30px;
     opacity: 0;
-    pointer-events: none;
+    pointer-events: auto;
+    overflow-y: auto;
     transform: scale(.9);
     transition: .3s ease;
     transition-delay: 0s;
+    opacity: 1;
 }
 
-.quiz-section .quiz-box.active {
+.lifestyle-section .lifestyle-box.active {
     opacity: 1;
     pointer-events: auto;
     overflow-y: auto;
 }
 
-.quiz-box h1 {
+.lifestyle-box h1 {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 32px;
@@ -68,29 +133,29 @@ body, html {
     border-radius: 6px;
 }
 
-.quiz-header span {
+.lifestyle-header span {
     font-size: 18px;
     font-weight: 500;
 }
 
-.quiz-box .question-text {
+.lifestyle-box .question-text {
     margin-bottom: 40px;
     font-size: 24px;
     font-weight: 600;
 }
 
-.option-list {
+.lifestyle-list {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.option-list .option:hover {
+.lifestyle-list .option:hover {
     border: 2px solid #333;
 }
 
-.option-list .option {
+.lifestyle-list .option {
     width: 300px;
     background-color: #fff;
     border-radius: 30px;
@@ -102,12 +167,12 @@ body, html {
 }
 
 
-.option-list .option.active {
+.lifestyle-list .option.active {
     color: #00a63d;
     border: 2px solid #333;
 }
 
-.quiz-box .quiz-footer {
+.lifestyle-box .lifestyle-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -115,11 +180,11 @@ body, html {
     margin-top: 30px;
 }
 
-.quiz-footer .question-total {
+.lifestyle-footer .question-total {
     font-weight: 600;
 }
 
-.quiz-footer .next-btn {
+.lifestyle-footer .next-btn {
     position: relative;
     padding: 10px 20px;
     background-color: #333;
@@ -135,18 +200,18 @@ body, html {
     transition: .5s;
 }
 
-.quiz-footer .next-btn.active:hover {
+.lifestyle-footer .next-btn.active:hover {
     background: #329da8;
     border-color: #329da8;
 }
 
-.quiz-footer .next-btn.active {
+.lifestyle-footer .next-btn.active {
     pointer-events: auto;
     background-color: #2c2c51;
     border-color: #2c2c51;
 }
 
-.quiz-footer .prev-btn {
+.lifestyle-footer .prev-btn {
     padding: 10px 20px;
     background-color: lightgray;
     color: #fff;
@@ -164,19 +229,16 @@ body, html {
     transition: .5s;
 }
 
-.quiz-footer .prev-btn.active {
+.lifestyle-footer .prev-btn.active {
     pointer-events: auto;
     background-color: #2c2c51;
     border-color: #2c2c51;
 }
 
-.quiz-footer .prev-btn.active:hover {
+.lifestyle-footer .prev-btn.active:hover {
     background: #329da8;
     border-color: #329da8;
 }
-
-
-
 
 
 
