--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1134,7 +1134,7 @@ label h6 {
     font-weight: 600;
 }
 
-.lifestyle-footer .next-btn {
+.lifestyle-footer .next-btn1 {
     position: relative;
     padding: 10px 20px;
     background-color: #333;
@@ -1150,18 +1150,18 @@ label h6 {
     transition: .5s;
 }
 
-.lifestyle-footer .next-btn.active:hover {
+.lifestyle-footer .next-btn1.active:hover {
     background: #329da8;
     border-color: #329da8;
 }
 
-.lifestyle-footer .next-btn.active {
+.lifestyle-footer .next-btn1.active {
     pointer-events: auto;
     background-color: #2c2c51;
     border-color: #2c2c51;
 }
 
-.lifestyle-footer .prev-btn {
+.lifestyle-footer .prev-btn1 {
     padding: 10px 20px;
     background-color: lightgray;
     color: #fff;
@@ -1179,13 +1179,13 @@ label h6 {
     transition: .5s;
 }
 
-.lifestyle-footer .prev-btn.active {
+.lifestyle-footer .prev-btn1.active {
     pointer-events: auto;
     background-color: #2c2c51;
     border-color: #2c2c51;
 }
 
-.lifestyle-footer .prev-btn.active:hover {
+.lifestyle-footer .prev-btn1.active:hover {
     background: #329da8;
     border-color: #329da8;
 }
